# MedicineRag

./: .coverage  .env  .env.example  .gitignore  AGENTS.md  pyproject.toml  temp_docs.json  test_health.py  test_load.py  test_rag.py  test_rerank.py
.iflow/: settings.json
app/: api_client.py  components.py  constants.py  main.py
app/pages/: analytics.py  knowledge.py
backend/: __init__.py  config.py  exceptions.py  logging_config.py  statistics.py
backend/api/: dependencies.py  main.py  models.py
backend/services/: confidence_calculator.py  doc_service.py  qa_service.py  question_type_detector.py  security_service.py
data/: qa_stats.json
data/documents/: 医疗知识问答.txt
data/embedding_cache/: embedding_cache.json
docs/: spec.md  technical-design.md
rag/: __init__.py  cache.py  chunker.py  engine.py  factory.py  llm_manager.py  reranker.py  retriever.py  vector_store.py
rag/agents/: __init__.py  base.py  medical_agent.py
rag/core/: __init__.py  engine.py  prompts.py  reranker.py
rag/memory/: __init__.py  conversation_memory.py
rag/processing/: __init__.py  document_processor.py
scripts/: start_all.py  stop_all.py
storage/: docstore.json  index_store.json
testdoc/: 常用药物手册.txt
tests/: conftest.py  test_chunker.py  test_confidence_calculator.py  test_exceptions.py  test_logging.py  test_question_type_detector.py  test_rag_core.py  test_retriever.py
tests/api/: test_api.py
tests/rag/: test_agent_base.py  test_agent_tools.py  test_cache.py  test_chunker.py  test_conversation_memory.py  test_engine.py  test_medical_agent.py  test_retriever.py
(+18 files in other folders)
